--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,36 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-node_modules
-/dist
-build
-coverage
-.vscode
+*.pem
 
-/tests/e2e/videos/
-/tests/e2e/screenshots/
-
-# local env files
-.env.local
-.env.development
-.env.production
-.env.*.local
-
-# Log files
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# local env files
+.env*.local
 
-.DS_Store
-node_modules
-/build
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
+# vercel
 .vercel
-.output
-/packages/**/build
-/packages/**/dist
-/apps/**/build
-/apps/**/dist
-/infra/**/build
-/infra/**/dist
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
